[package]
name = "gpt-image-2"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for GPT-Image-2 compatible image generation and editing APIs."
license = "MIT"

[[bin]]
name = "gpt-image-2"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
ureq = { version = "2.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
